# AdventOfCode2019

./: .gitignore  README.md
day01/: Cargo.toml
day01/src/: functional.rs  iterator.rs  lib.rs  main.rs  simple.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day03ui/: Cargo.toml
day03ui/src/: lib.rs  main.rs  worker.rs
day03ui/static/: bin
day04/: Cargo.toml
day04/src/: functional.rs  lib.rs  main.rs  simple.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: intcode.rs  lib.rs  main.rs  simple.rs  spawn.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: intcode.rs  lib.rs  main.rs
day10/: Cargo.toml
day10/src/: generic.rs  lib.rs  main.rs  simple.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day11ui/: Cargo.toml
day11ui/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/: Cargo.toml
day13/src/: lib.rs  main.rs
day13ui/: Cargo.toml
day13ui/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: fast.rs  lib.rs  main.rs  simple.rs
day15/: Cargo.toml
day15/src/: lib.rs  search.rs
day15ui/: Cargo.toml
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day23/: Cargo.toml
day24/: Cargo.toml
day25/: Cargo.toml
day25ui/: Cargo.toml  index.html  index.scss
day25ui/src/: lib.rs  main.rs
intcode/: Cargo.toml
(+36 files in other folders)
