[package]
name = "day03ui"
version = "0.1.0"
authors = ["vescoc <claudio.vesco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day03 = { path = "../day03" }
yew = "0.10"
stdweb = "0.4"
serde = "1.0"
serde_derive = "1.0"
