[package]
name = "day25ui"
version = "0.1.0"
authors = ["vescoc <claudio.vesco@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlElement"] }
gloo-console = "0.2"
intcode = { path = "../intcode" }
